Saved Jupyter notebook 'notebook editor for compute_dictionaries_of_aviation'

--- a/ipython_notebooks/notebook editor for compute_dictionaries_of_aviation.ipynb
+++ b/ipython_notebooks/notebook editor for compute_dictionaries_of_aviation.ipynb
@@ -35,7 +35,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd, numpy as np\nfrom dataiku import pandasutils as pdu\n\n# Read recipe inputs\nDictionaries \u003d dataiku.Folder(\"PP5gsWW1\")\nDictionaries_info \u003d Dictionaries.get_info()\n\n\n# Compute recipe outputs\n# TODO: Write here your actual code that computes the outputs\n# NB: DSS supports several kinds of APIs for reading and writing data. Please see doc.\n\ndictionaries_of_aviation_df \u003d ... # Compute a Pandas dataframe to write into dictionaries_of_aviation\n\n\n# Write recipe outputs\ndictionaries_of_aviation \u003d dataiku.Dataset(\"dictionaries_of_aviation\")\ndictionaries_of_aviation.write_with_schema(dictionaries_of_aviation_df)"
+        "# -*- coding: utf-8 -*-\nimport dataiku\nimport fitz  # PyMuPDF\nimport pandas as pd"
       ],
       "outputs": []
     },
@@ -44,16 +44,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd\nimport numpy as np\nfrom dataiku import pandasutils as pdu\nimport PyPDF2\nimport os"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "import dataiku\nimport fitz  # PyMuPDF\nimport pandas as pd\n\n# Read recipe inputs\nDictionaries \u003d dataiku.Folder(\"PP5gsWW1\")\nDictionaries_info \u003d Dictionaries.get_info()\n\n# Initialize an empty list to store data\ndata \u003d []\n\n# Iterate through the files in the folder\nfor file_path in Dictionaries.list_paths_in_partition():\n    with Dictionaries.get_download_stream(file_path) as f:\n        # Open the PDF file\n        pdf_document \u003d fitz.open(stream\u003df.read(), filetype\u003d\"pdf\")\n        text \u003d \"\"\n        for page_num in range(len(pdf_document)):\n            page \u003d pdf_document[page_num]\n            text +\u003d page.get_text()\n        data.append({\"file_path\": file_path, \"content\": text})\n\n# Convert the list to a dataframe\ndictionaries_of_aviation_df \u003d pd.DataFrame(data)\n"
+        "# Read recipe inputs\nDictionaries \u003d dataiku.Folder(\"PP5gsWW1\")\nDictionaries_info \u003d Dictionaries.get_info()\n\n# Initialize an empty list to store data\ndata \u003d []\n\n# Iterate through the files in the folder\nfor file_path in Dictionaries.list_paths_in_partition():\n    with Dictionaries.get_download_stream(file_path) as f:\n        # Open the PDF file\n        pdf_document \u003d fitz.open(stream\u003df.read(), filetype\u003d\"pdf\")\n        text \u003d \"\"\n        for page_num in range(len(pdf_document)):\n            page \u003d pdf_document[page_num]\n            text +\u003d page.get_text()\n        data.append({\"file_path\": file_path, \"content\": text})\n\n# Convert the list to a dataframe\ndictionaries_of_aviation_df \u003d pd.DataFrame(data)\n"
       ],
       "outputs": []
     },
@@ -72,6 +63,15 @@
       "metadata": {},
       "source": [
         "# Write recipe outputs\ndictionaries_of_aviation \u003d dataiku.Dataset(\"dictionaries_of_aviation\")\ndictionaries_of_aviation.write_with_schema(dictionaries_of_aviation_df)"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        ""
       ],
       "outputs": []
     }
