Saved Jupyter notebook 'notebook editor for compute_dale_crane_dic'

--- a/ipython_notebooks/notebook editor for compute_dale_crane_dic.ipynb
+++ b/ipython_notebooks/notebook editor for compute_dale_crane_dic.ipynb
@@ -53,7 +53,16 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "dictionaries_of_aviation_df[\"content\"][0]"
+        "dictionaries_of_aviation_df"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "dictionaries_of_aviation_df[\"content\"][2]"
       ],
       "outputs": []
     },
