Saved Jupyter notebook 'notebook editor for compute_dale_crane_dic'

--- a/ipython_notebooks/notebook editor for compute_dale_crane_dic.ipynb
+++ b/ipython_notebooks/notebook editor for compute_dale_crane_dic.ipynb
@@ -62,7 +62,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "dictionaries_of_aviation_df[\"content\"][2]"
+        "dictionary \u003d dictionaries_of_aviation_df[\"content\"][2]"
       ],
       "outputs": []
     },
