Saved Jupyter notebook 'notebook editor for compute_dale_crane_dic'

--- a/ipython_notebooks/notebook editor for compute_dale_crane_dic.ipynb
+++ b/ipython_notebooks/notebook editor for compute_dale_crane_dic.ipynb
@@ -35,7 +35,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd, numpy as np\nfrom dataiku import pandasutils as pdu"
+        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd, numpy as np\nfrom dataiku import pandasutils as pdu\nimport re"
       ],
       "outputs": []
     },
@@ -89,7 +89,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "clean_dictionary \u003d dictionary.replace(\"-\\n\",\"\")"
+        "clean_dictionary \u003d dictionary.replace(\"-\\n\",\"\")\nclean_dictionary \u003d re.sub(r\u0027\\s*\\n\\s*\u0027, \u0027 \u0027, clean_dictionary)\n"
       ],
       "outputs": []
     },
