--- a/ipython_notebooks/notebook editor for compute_dale_crane_dic.ipynb
+++ b/ipython_notebooks/notebook editor for compute_dale_crane_dic.ipynb
@@ -89,7 +89,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "clean_dictionary \u003d dictionary.replace(\"-\\n\",\"\")\nclean_dictionary \u003d re.sub(r\u0027\\s*\\n\\s*\u0027, \u0027 \u0027, clean_dictionary)\nclean_dictionary \u003d re.sub(\" \\x02 \", \u0027 \u0027, clean_dictionary)\n\n\n"
+        "clean_dictionary \u003d dictionary.replace(\"-\\n\",\"\")\nclean_dictionary \u003d re.sub(r\u0027\\s*\\n\\s*\u0027, \u0027 \u0027, clean_dictionary)\nclean_dictionary \u003d re.sub(\" \\x02 \", \u0027 \u0027, clean_dictionary)"
       ],
       "outputs": []
     },
