Saved Jupyter notebook 'notebook editor for compute_dale_crane_dic'

--- a/ipython_notebooks/notebook editor for compute_dale_crane_dic.ipynb
+++ b/ipython_notebooks/notebook editor for compute_dale_crane_dic.ipynb
@@ -80,7 +80,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "clean_dictionary \u003d dictionary\nclean_dictionary \u003d clean_dictionary.replace(r\"-\\n\",\"\")\nclean_dictionary \u003d clean_dictionary.replace(r\" \\n\",\" \")\n\n#clean_dictionary \u003d re.sub(r\u0027\\s*\\n\\s*\u0027, \u0027 \u0027, clean_dictionary)\nclean_dictionary \u003d re.sub(r\u0027([a-zA-Z]|[0-9])\\n([a-zA-Z]|[0-9])\u0027, r\u0027\\1 \\2\u0027, clean_dictionary)\nclean_dictionary \u003d re.sub(\" \\x02 \", \u0027 \u0027, clean_dictionary)"
+        "clean_dictionary \u003d dictionary\nclean_dictionary \u003d clean_dictionary.replace(\"-\\n\",\"\")\nclean_dictionary \u003d clean_dictionary.replace(\" \\n\",\" \")\n\n#clean_dictionary \u003d re.sub(r\u0027\\s*\\n\\s*\u0027, \u0027 \u0027, clean_dictionary)\nclean_dictionary \u003d re.sub(r\u0027([a-zA-Z]|[0-9])\\n([a-zA-Z]|[0-9])\u0027, r\u0027\\1 \\2\u0027, clean_dictionary)\nclean_dictionary \u003d re.sub(\" \\x02 \", \u0027 \u0027, clean_dictionary)"
       ],
       "outputs": []
     },
