Saved Jupyter notebook 'notebook editor for compute_dale_crane_dic'

--- a/ipython_notebooks/notebook editor for compute_dale_crane_dic.ipynb
+++ b/ipython_notebooks/notebook editor for compute_dale_crane_dic.ipynb
@@ -94,11 +94,18 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Entries"
+      ]
+    },
+    {
       "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "import re\n\nmatches \u003d re.findall(r\u0027\\b(\\w+)\\b\\s+\\b\\1\\b\u0027, clean_dictionary)\nprint(matches)"
+        "entries \u003d re.findall(r\u0027\\b(\\w+)\\b\\s+\\b\\1\\b\u0027, clean_dictionary)"
       ],
       "outputs": []
     },
