--- a/ipython_notebooks/notebook editor for compute_dale_crane_dic.ipynb
+++ b/ipython_notebooks/notebook editor for compute_dale_crane_dic.ipynb
@@ -114,6 +114,15 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
+        "pattern \u003d r\u0027\\b(\\w+)\\b\\s+\\b\\1\\b\u0027\nreplacement \u003d r\u0027[[[\\1]]]\u0027\ndictionary_with_entries \u003d re.sub(pattern, replacement, clean_dictionary)\ndictionary_with_entries"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
         "\n\n\n\n\n# Compute recipe outputs from inputs\n# TODO: Replace this part by your actual code that computes the output, as a Pandas dataframe\n# NB: DSS also supports other kinds of APIs for reading and writing data. Please see doc.\n\ndale_crane_dic_df \u003d dictionaries_of_aviation_df # For this sample code, simply copy input to output\n\n\n"
       ],
       "outputs": []
