Saved Jupyter notebook 'notebook editor for compute_dale_crane_dic'

--- a/ipython_notebooks/notebook editor for compute_dale_crane_dic.ipynb
+++ b/ipython_notebooks/notebook editor for compute_dale_crane_dic.ipynb
@@ -114,7 +114,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "pattern \u003d r\u0027\\b(\\w+)\\b\\s+\\b\\1\\b\u0027\nreplacement \u003d r\u0027[[[\\1]]]\u0027\ndictionary_with_entries \u003d re.sub(pattern, replacement, clean_dictionary)\ndictionary_with_entries"
+        "pattern \u003d r\u0027\\b(\\w+)\\b\\s+\\b\\1\\b /\u0027\nreplacement \u003d r\u0027[[[\\1]]] /\u0027\ndictionary_with_entries \u003d re.sub(pattern, replacement, clean_dictionary)\ndictionary_with_entries"
       ],
       "outputs": []
     },
