--- a/ipython_notebooks/notebook editor for compute_dale_crane_dic.ipynb
+++ b/ipython_notebooks/notebook editor for compute_dale_crane_dic.ipynb
@@ -132,7 +132,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "import pandas as pd\nimport re\n\n# Given text\n\n# Split the text using triple brackets\nentries \u003d re.split(r\u0027\\[\\[\\[|\\]\\]\\]\u0027, dictionary_with_entries)\n\n# Remove empty entries and strip whitespace\nentries \u003d [entry.strip() for entry in entries if entry.strip()]\n\n# Ensure both columns have the same length by adding empty strings if necessary\nif len(entries) % 2 !\u003d 0:\n    entries.append(\u0027\u0027)\n\n# Create a DataFrame with two columns: \u0027Entry\u0027 and \u0027Definition\u0027\ndata \u003d {\u0027Entry\u0027: entries[0::2], \u0027Definition\u0027: entries[1::2]}\ndf \u003d pd.DataFrame(data)\n\ndf\n"
+        "# Split the text using triple brackets\nentries \u003d re.split(r\u0027\\[\\[\\[|\\]\\]\\]\u0027, dictionary_with_entries)\n\n# Remove empty entries and strip whitespace\nentries \u003d [entry.strip() for entry in entries if entry.strip()]\n\n# Ensure both columns have the same length by adding empty strings if necessary\nif len(entries) % 2 !\u003d 0:\n    entries.append(\u0027\u0027)\n\n# Create a DataFrame with two columns: \u0027Entry\u0027 and \u0027Definition\u0027\ndata \u003d {\u0027Entry\u0027: entries[0::2], \u0027Definition\u0027: entries[1::2]}\ndf \u003d pd.DataFrame(data)\ndf\n"
       ],
       "outputs": []
     },
