Saved Jupyter notebook 'notebook editor for compute_dale_crane_dic'

--- a/ipython_notebooks/notebook editor for compute_dale_crane_dic.ipynb
+++ b/ipython_notebooks/notebook editor for compute_dale_crane_dic.ipynb
@@ -132,7 +132,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "df[\"Definition\"][0:]"
+        "pd.DataFrame({\"entry\":,\"definition\":  df[\"Entry\"][1:1871]})"
       ],
       "outputs": []
     },
@@ -141,7 +141,16 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "df[\"Entry\"][1:]"
+        ""
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        ""
       ],
       "outputs": []
     },
