Saved Jupyter notebook 'notebook editor for compute_dale_crane_dic'

--- a/ipython_notebooks/notebook editor for compute_dale_crane_dic.ipynb
+++ b/ipython_notebooks/notebook editor for compute_dale_crane_dic.ipynb
@@ -132,7 +132,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "pd.DataFrame({\"entry\":,\"definition\":  df[\"Entry\"][1:1871]})"
+        "pd.DataFrame({\"entry\":df[\"Definition\"][0:1870],\"definition\":list(df[\"Entry\"][1:1871])})"
       ],
       "outputs": []
     },
@@ -141,7 +141,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        ""
+        "df[\"Definition\"][0:1870]"
       ],
       "outputs": []
     },
@@ -150,7 +150,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        ""
+        "list(df[\"Entry\"][1:1871])"
       ],
       "outputs": []
     },
