--- a/ipython_notebooks/notebook editor for compute_sentences.ipynb
+++ b/ipython_notebooks/notebook editor for compute_sentences.ipynb
@@ -35,7 +35,7 @@
       "lastInteraction": 0
     },
     "associatedRecipe": "compute_sentences",
-    "modifiedBy": "ludovic.bocken@cgi.com"
+    "modifiedBy": "fabien.antoine@cgi.com"
   },
   "nbformat": 4,
   "nbformat_minor": 1,
