--- a/ipython_notebooks/notebook editor for compute_sentences.ipynb
+++ b/ipython_notebooks/notebook editor for compute_sentences.ipynb
@@ -52,7 +52,16 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd\nimport numpy as np\nfrom dataiku import pandasutils as pdu\nimport nltk\nnltk.download(\u0027punkt\u0027)\nnltk.download(\u0027punkt_tab\u0027)\nfrom nltk.tokenize import sent_tokenize\nimport spacy\n# Load the spaCy model\n!python3 -m spacy download en_core_web_sm\nnlp \u003d spacy.load(\u0027en_core_web_sm\u0027)\nimport os"
+        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd\nimport numpy as np\nfrom dataiku import pandasutils as pdu\nimport nltk\nnltk.download(\u0027punkt\u0027)\nnltk.download(\u0027punkt_tab\u0027)\nfrom nltk.tokenize import sent_tokenize\nimport spacy\n# Load the spaCy model\n!python3 -m spacy download en_core_web_sm"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "nlp \u003d spacy.load(\u0027en_core_web_sm\u0027)\nimport os"
       ],
       "outputs": []
     },
