--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_spacy.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_spacy.ipynb
@@ -41,15 +41,6 @@
   "nbformat_minor": 1,
   "cells": [
     {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd, numpy as np\nfrom dataiku import pandasutils as pdu\n\n# Read recipe inputs\ncorpus_for_knowledge_engineering \u003d dataiku.Dataset(\"corpus_for_knowledge_engineering\")\ncorpus_for_knowledge_engineering_df \u003d corpus_for_knowledge_engineering.get_dataframe()\n\n\n# Compute recipe outputs from inputs\n# TODO: Replace this part by your actual code that computes the output, as a Pandas dataframe\n# NB: DSS also supports other kinds of APIs for reading and writing data. Please see doc.\n\nnouns_extracted_with_spacy_df \u003d corpus_for_knowledge_engineering_df # For this sample code, simply copy input to output"
-      ],
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -96,6 +87,24 @@
       "metadata": {},
       "source": [
         "corpus_for_knowledge_engineering_df"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "text \u003d corpus_for_knowledge_engineering_df[\"text\"][0]\ndoc \u003d nlp(text)"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "nouns \u003d [(token.text, token.pos_) for token in doc if token.pos_ \u003d\u003d \"NOUN\"]\nnouns"
       ],
       "outputs": []
     },
