Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_spacy'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_spacy.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_spacy.ipynb
@@ -104,7 +104,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "nouns \u003d [(token.text, token.pos_) for token in doc if token.pos_ \u003d\u003d \"NOUN\"]\nnouns"
+        "nouns \u003d [(token.text, token.pos_) for token in doc if token.pos_ \u003d\u003d \"NOUN\"]\npd.DataFrame(nouns, columns\u003d[\u0027word\u0027, \u0027tag\u0027])"
       ],
       "outputs": []
     },
