Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_spacy'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_spacy.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_spacy.ipynb
@@ -138,7 +138,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Apply the function to each row and concatenate the results\npos_df \u003d pd.concat([extract_nouns(row[\u0027doc_id\u0027], row[\u0027text\u0027]) for _, row in corpus_for_knowledge_engineering_df[0:2].iterrows()], ignore_index\u003dTrue)"
+        "# Apply the function to each row and concatenate the results\npos_df \u003d pd.concat([extract_nouns(row[\u0027doc_id\u0027], row[\u0027text\u0027]) for _, row in corpus_for_knowledge_engineering_df.iterrows()], ignore_index\u003dTrue)"
       ],
       "outputs": []
     },
