Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_spacy'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_spacy.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_spacy.ipynb
@@ -129,7 +129,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Define the function to extract nouns and return a DataFrame\ndef extract_nouns(doc_id, text):\n    doc \u003d nlp(text)\n    nouns \u003d [(doc_id, token.text, token.pos_) for token in doc if token.pos_ \u003d\u003d \"NOUN\"]\n    return pd.DataFrame(nouns, columns\u003d[\u0027doc_id\u0027, \u0027word\u0027, \u0027tag\u0027])"
+        "# Define the function to extract nouns and return a DataFrame\ndef extract_nouns(doc_id, text):\n    # Increase the max_length limit\n    nlp.max_length \u003d 3000000  # Set this to a value higher than your text length\n    doc \u003d nlp(text)\n    nouns \u003d [(doc_id, token.text, token.pos_) for token in doc if token.pos_ \u003d\u003d \"NOUN\"]\n    return pd.DataFrame(nouns, columns\u003d[\u0027doc_id\u0027, \u0027word\u0027, \u0027tag\u0027])"
       ],
       "outputs": []
     },
