Created Jupyter notebook 'notebook editor for compute_corpus_statistics_from_voc_dale_crane' for recipe 'NONCONFORMITIES.compute_corpus_statistics_from_voc_dale_crane' (lang=python)

--- a/ipython_notebooks/notebook editor for compute_corpus_statistics_from_voc_dale_crane.ipynb
+++ b/ipython_notebooks/notebook editor for compute_corpus_statistics_from_voc_dale_crane.ipynb
@@ -1,97 +1,135 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
   "metadata": {
     "kernelspec": {
-      "name": "py-dku-containerized-venv-markitdown-scw-fa",
       "display_name": "Python in SCW-FA (env markitdown)",
-      "language": "python"
+      "language": "python",
+      "name": "py-dku-containerized-venv-markitdown-scw-fa"
     },
-    "hide_input": false,
-    "language_info": {
-      "name": "python",
-      "version": "3.11.10",
-      "mimetype": "text/x-python",
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
+    "associatedRecipe": "compute_corpus_statistics_from_voc_dale_crane",
+    "dkuGit": {
+      "lastInteraction": 0
+    },
+    "creationTag": {
+      "versionNumber": 0,
+      "lastModifiedBy": {
+        "login": "ludovic.bocken@cgi.com"
       },
-      "pygments_lexer": "ipython3",
-      "nbconvert_exporter": "python",
-      "file_extension": ".py"
+      "lastModifiedOn": 1738781476828
     },
-    "createdOn": 1738781476828,
     "creator": "ludovic.bocken@cgi.com",
-    "customFields": {},
+    "createdOn": 1738781476828,
     "tags": [
       "recipe-editor"
     ],
-    "associatedRecipe": "compute_corpus_statistics_from_voc_dale_crane",
-    "modifiedBy": "ludovic.bocken@cgi.com"
+    "customFields": {}
   },
-  "nbformat": 4,
-  "nbformat_minor": 1,
   "cells": [
     {
-      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
+      "outputs": [],
+      "execution_count": 0,
       "source": [
-        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd, numpy as np\nfrom dataiku import pandasutils as pdu\nfrom collections import Counter"
-      ],
-      "outputs": []
+        "# -*- coding: utf-8 -*-\n",
+        "import dataiku\n",
+        "import pandas as pd, numpy as np\n",
+        "from dataiku import pandasutils as pdu\n",
+        "from collections import Counter"
+      ]
     },
     {
-      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
+      "outputs": [],
+      "execution_count": 0,
       "source": [
-        "# Read recipe inputs\ncorpus_for_knowledge_engineering \u003d dataiku.Dataset(\"corpus_for_knowledge_engineering\")\ncorpus_for_knowledge_engineering_df \u003d corpus_for_knowledge_engineering.get_dataframe()\n\ndale_crane_dic \u003d dataiku.Dataset(\"dale_crane_dic\")\ndale_crane_dic_df \u003d dale_crane_dic.get_dataframe()"
-      ],
-      "outputs": []
+        "# Read recipe inputs\n",
+        "corpus_for_knowledge_engineering \u003d dataiku.Dataset(\"corpus_for_knowledge_engineering\")\n",
+        "corpus_for_knowledge_engineering_df \u003d corpus_for_knowledge_engineering.get_dataframe()\n",
+        "\n",
+        "dale_crane_dic \u003d dataiku.Dataset(\"dale_crane_dic\")\n",
+        "dale_crane_dic_df \u003d dale_crane_dic.get_dataframe()"
+      ]
     },
     {
-      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
+      "outputs": [],
+      "execution_count": 0,
       "source": [
-        "corpus \u003d corpus_for_knowledge_engineering_df[\"text\"]"
-      ],
-      "outputs": []
+        "corpus \u003d corpus_for_knowledge_engineering_df[\"text\"]\n",
+        "doc_ids \u003d corpus_for_knowledge_engineering_df[\"doc_id\"]"
+      ]
     },
     {
-      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
+      "outputs": [],
+      "execution_count": 0,
       "source": [
         "vocabulary \u003d dale_crane_dic_df[\"entry\"]"
-      ],
-      "outputs": []
+      ]
     },
     {
-      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
+      "outputs": [],
+      "execution_count": 0,
       "source": [
-        "def compute_statistics(corpus, vocabulary):\n    # Tokenize the corpus into words\n    words \u003d corpus.split()\n\n    # Count the occurrences of each word in the corpus\n    word_counts \u003d Counter(words)\n\n    # Filter the counts to include only the words in the vocabulary\n    vocab_counts \u003d {word: word_counts[word] for word in vocabulary if word in word_counts}\n\n    # Compute statistics\n    total_words \u003d len(words)\n    vocab_word_count \u003d sum(vocab_counts.values())\n    vocab_word_percentage \u003d (vocab_word_count / total_words) * 100 if total_words \u003e 0 else 0\n\n    return {\n        \u0027total_words\u0027: total_words,\n        \u0027vocab_word_count\u0027: vocab_word_count,\n        \u0027vocab_word_percentage\u0027: vocab_word_percentage,\n        \u0027vocab_counts\u0027: vocab_counts\n    }"
-      ],
-      "outputs": []
+        "def compute_statistics(corpus, vocabulary):\n",
+        "    # Tokenize the corpus into words\n",
+        "    words \u003d corpus.split()\n",
+        "\n",
+        "    # Count the occurrences of each word in the corpus\n",
+        "    word_counts \u003d Counter(words)\n",
+        "\n",
+        "    # Filter the counts to include only the words in the vocabulary\n",
+        "    vocab_counts \u003d {word: word_counts[word] for word in vocabulary if word in word_counts}\n",
+        "\n",
+        "    # Compute statistics\n",
+        "    total_words \u003d len(words)\n",
+        "    vocab_word_count \u003d sum(vocab_counts.values())\n",
+        "    vocab_word_percentage \u003d (vocab_word_count / total_words) * 100 if total_words \u003e 0 else 0\n",
+        "\n",
+        "    return {\n",
+        "        \u0027total_words\u0027: total_words,\n",
+        "        \u0027vocab_word_count\u0027: vocab_word_count,\n",
+        "        \u0027vocab_word_percentage\u0027: vocab_word_percentage,\n",
+        "        \u0027vocab_counts\u0027: vocab_counts\n",
+        "    }"
+      ]
     },
     {
-      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
+      "outputs": [],
+      "execution_count": 0,
       "source": [
-        "# Compute recipe outputs\n# TODO: Write here your actual code that computes the outputs\n# NB: DSS supports several kinds of APIs for reading and writing data. Please see doc.\n\ncorpus_statistics_from_voc_dale_crane_df \u003d compute_statistics(corpus, vocabulary)"
-      ],
-      "outputs": []
+        "# Compute recipe outputs\n",
+        "# TODO: Write here your actual code that computes the outputs\n",
+        "# NB: DSS supports several kinds of APIs for reading and writing data. Please see doc.\n",
+        "\n",
+        "statistics_list \u003d []\n",
+        "for doc_id, text in zip(doc_ids, corpus):\n",
+        "    stats \u003d compute_statistics(text, vocabulary)\n",
+        "    stats[\u0027doc_id\u0027] \u003d doc_id\n",
+        "    statistics_list.append(stats)\n",
+        "\n",
+        "corpus_statistics_from_voc_dale_crane_df \u003d pd.DataFrame(statistics_list)"
+      ]
     },
     {
-      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
+      "outputs": [],
+      "execution_count": 0,
       "source": [
-        "# Write recipe outputs\ncorpus_statistics_from_voc_dale_crane \u003d dataiku.Dataset(\"corpus_statistics_from_voc_dale_crane\")\ncorpus_statistics_from_voc_dale_crane.write_with_schema(corpus_statistics_from_voc_dale_crane_df)"
-      ],
-      "outputs": []
+        "# Write recipe outputs\n",
+        "corpus_statistics_from_voc_dale_crane \u003d dataiku.Dataset(\"corpus_statistics_from_voc_dale_crane\")\n",
+        "corpus_statistics_from_voc_dale_crane.write_with_schema(corpus_statistics_from_voc_dale_crane_df)"
+      ]
     }
   ]
 }
