--- a/ipython_notebooks/notebook editor for compute_transport_canada_dic.ipynb
+++ b/ipython_notebooks/notebook editor for compute_transport_canada_dic.ipynb
@@ -94,6 +94,15 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
+        "entries \u003d re.findall(r\u0027\\n n\u0027, clean_dictionary)\n"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
         "# Compute recipe outputs from inputs\n# TODO: Replace this part by your actual code that computes the output, as a Pandas dataframe\n# NB: DSS also supports other kinds of APIs for reading and writing data. Please see doc.\n\ntransport_canada_dic_df \u003d dictionaries_of_aviation_df # For this sample code, simply copy input to output\n\n\n# Write recipe outputs\ntransport_canada_dic \u003d dataiku.Dataset(\"transport_canada_dic\")\ntransport_canada_dic.write_with_schema(transport_canada_dic_df)"
       ],
       "outputs": []
