Saved Jupyter notebook 'notebook editor for compute_transport_canada_dic'

--- a/ipython_notebooks/notebook editor for compute_transport_canada_dic.ipynb
+++ b/ipython_notebooks/notebook editor for compute_transport_canada_dic.ipynb
@@ -94,7 +94,16 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "entries \u003d re.findall(r\u0027\\n n\u0027, clean_dictionary)\n"
+        "pattern\nentries \u003d re.findall(r\u0027\\n(\\w+)\\s\\n\u0027, dictionary)\nentries"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "pattern \u003d r\u0027\\n(\\w+)\\s\\n\u0027\nreplacement \u003d r\u0027[[[\\1]]] /\u0027\ndictionary_with_entries \u003d re.sub(pattern, replacement, clean_dictionary)\ndictionary_with_entries"
       ],
       "outputs": []
     },
